# stilsoft_test_task

./: Cargo.toml  README.md  config.toml  results.json  source.json  urls.txt
src/: cli.rs  db.rs  db1.rs  engine.rs  main.rs  server.rs  tests.rs
