[package]
edition = "2021"
name = "stilsoft_test_task"
version = "0.1.0"

[dependencies]
anyhow = "1.0" 
reqwest = {version = "0.11", features = ["json"]} 
serde = {version = "1.0", features = ["derive"]} 
serde_json = "1.0" 
sled = "0.34.7"
tokio = {version = "1", features = ["full"]} 

[dev-dependencies]
mockito = "0.30"
