[package]
edition = "2021"
name = "stilsoft_test_task"
version = "0.1.0"

[dependencies]
anyhow = "1.0" 
# axum = "0.8"
axum = "0.7"
# axum = { version = "0.7", features = ["tracing", "macros", "multipart", "ws", "json" ] }
clap = { version = "4", features = ["derive"]}
md5 = "0.7.0"
reqwest = {version = "0.11", features = ["json"]} 
serde = {version = "1.0", features = ["derive"]} 
serde_json = "1.0" 
sled = "0.34.7"
tokio = {version = "1", features = ["full"]} 
tokio-stream = "0.1"

sha2 = "0.9"  # Проверьте актуальную версию
hex = "0.4"
blake2 = "0.10.6"

[dev-dependencies]
mockito = "0.30"
