[package]
edition = "2021"
name = "stilsoft_test_task"
version = "0.2.0"

[dependencies]
anyhow = "1" 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
dotenv = "0.15"
axum = "0.8"
clap = { version = "4", features = ["derive"]}
reqwest = {version = "0.12", features = ["json"]} 
serde = {version = "1", features = ["derive"]} 
serde_json = "1" 
sled = "0.34"
tokio = {version = "1", features = ["full"]} 

sha2 = "0.10"  
hex = "0.4"

futures = { version = "0.3" }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1"
